<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardCornerRadius="16dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/diag_label_exp_title"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/closeButton"
            app:layout_constraintEnd_toStartOf="@+id/closeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragExpLabelExpName"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeButton" />

        <EditText
            android:id="@+id/expensenameedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_roundcornersnotfilled"
            android:hint="@string/frag_exp_exmp_exp_name"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragExpLabelCat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/expensenameedit"
            tools:layout_editor_absoluteX="16dp" />

        <Spinner
            android:id="@+id/expensecategoryspinneredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_roundcornersnotfilled"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/AddInitialCatedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category_first"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragExpLabelAm"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/AddInitialCatedit"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/expenseamountedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_roundcornersnotfilled"
            android:drawableLeft="@drawable/ic_peso"
            android:drawablePadding="10dp"
            android:hint="@string/frag_exp_exmp_amount"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragExpLabelDate"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseamountedit" />


        <TextView
            android:id="@+id/datepurchasededit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_roundcornersnotfilled"
            android:gravity="center_vertical|start"
            android:hint="@string/frag_exp_exmp_date"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:drawableEndCompat="@drawable/ic_calendar_24"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="-1dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FragExpLabelDesc"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/datepurchasededit"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/expensedescedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_roundcornersnotfilled"
            android:gravity="start"
            android:hint="Birthday Cake"
            android:maxLines="5"
            android:minLines="5"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layout_editor_absoluteX="16dp" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/save_txt"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expensedescedit" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/expensedescedit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

